Fix notification icon alignment issue
Fixes #97

--- a/src/static/css/project.css
+++ b/src/static/css/project.css
@@ -45,6 +45,9 @@ body.fullwidth > .container,
 .btn.navbar-left {
     margin-right: 5px;
 }
+.btn.navbar-right {
+    margin-right: 0px;
+}
 .date-error {
     color: #B94A48;
 }
